<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/cylindergradient"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".RectangleActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="330dp"
            android:layout_height="160dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cylinder" />

        <TextView
            android:id="@+id/cylinder_radius_title"
            style="@style/component_title"
            android:layout_marginTop="8dp"
            android:text="@string/cylinder_radius_title"
            app:layout_constraintEnd_toStartOf="@+id/cylinder_radius_field"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/cylinder_radius_field"
            android:layout_width="194dp"
            android:layout_height="28dp"
            android:layout_marginTop="8dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="center|center_horizontal"
            android:inputType="numberDecimal"
            android:text="@string/cylinder_radius_value"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/cylinder_height_title"
            android:layout_width="113dp"
            android:layout_height="28dp"
            android:layout_marginTop="8dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/cylinder_height_title"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toStartOf="@+id/cylinder_height_field"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/cylinder_radius_title" />

        <EditText
            android:id="@+id/cylinder_height_field"
            android:layout_width="194dp"
            android:layout_height="28dp"
            android:layout_marginTop="8dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:text="@string/cylinder_height_value"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/cylinder_radius_field" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="Calculate"
            android:text="@string/calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cylinder_height_field" />

        <TextView
            android:id="@+id/cylinder_base_title"
            style="@style/formula_line2"
            android:layout_marginTop="16dp"
            android:text="@string/cylinder_base_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculate" />

        <TextView
            android:id="@+id/cylinder_base_field"
            style="@style/value_line2"
            android:layout_marginTop="16dp"
            android:text="@string/cylinder_base_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cylinder_base_title" />

        <TextView
            android:id="@+id/cylinder_lateral_title"
            style="@style/formula_line"
            android:layout_width="252dp"
            android:layout_height="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/cylinder_lateral_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cylinder_base_field" />

        <TextView
            android:id="@+id/cylinder_lateral_field"
            style="@style/value_line3"
            android:layout_marginTop="16dp"
            android:text="@string/cylinder_lateral_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cylinder_lateral_title" />

        <TextView
            android:id="@+id/cylinder_area_title"
            style="@style/formula_line"
            android:layout_width="253dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:text="@string/cylinder_area_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cylinder_lateral_field" />

        <TextView
            android:id="@+id/cylinder_area_field"
            style="@style/value_line3"
            android:layout_width="171dp"
            android:layout_height="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/cylinder_area_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cylinder_area_title" />

        <TextView
            android:id="@+id/cylinder_volume_title"
            style="@style/formula_line"
            android:layout_width="253dp"
            android:layout_height="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/cylinder_volume_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cylinder_area_field" />

        <TextView
            android:id="@+id/cylinder_volume_field"
            style="@style/value_line2"
            android:layout_width="171dp"
            android:layout_height="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/cylinder_volume_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cylinder_volume_title" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="Back"
            android:text="@string/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cylinder_volume_field" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

